// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSortChevron should correctly render default icon 1`] = `
<AccessibleSVG
  className="bdl-icon-sort-chevron "
  height={11}
  viewBox="0 0 9.8 9.7"
  width={11}
>
  <path
    className="fill-color"
    d="M4.9 6.7c-.1 0-.3-.1-.4-.2L2 4c-.3-.2-.3-.6 0-.8s.6-.2.8 0l2.1 2.1L7 3.2c.2-.2.6-.2.8 0s.2.6 0 .8L5.3 6.5c-.1.1-.3.2-.4.2z"
    fill="#aeaeae"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconSortChevron should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="bdl-icon-sort-chevron test"
  height={100}
  title="title"
  viewBox="0 0 9.8 9.7"
  width={200}
>
  <path
    className="fill-color"
    d="M4.9 6.7c-.1 0-.3-.1-.4-.2L2 4c-.3-.2-.3-.6 0-.8s.6-.2.8 0l2.1 2.1L7 3.2c.2-.2.6-.2.8 0s.2.6 0 .8L5.3 6.5c-.1.1-.3.2-.4.2z"
    fill="#444"
  />
</AccessibleSVG>
`;
